Starting mobile menu

--- a/index.html
+++ b/index.html
@@ -11,10 +11,39 @@
       rel="stylesheet"
     />
     <!-- CSS -->
-    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/header.css" />
+    <link rel="stylesheet" href="./styles/banner.css" />
     <title>Nós Treinamentos</title>
   </head>
   <body>
-    <h1>Nós Treinamentos</h1>
+    <!-- Header -->
+    <header class="header-container">
+      <nav class="header-subcontainer">
+        <a class="main-logo-container" href="/">
+          <img class="main-logo" src="./assets/nos-logo.svg" alt="Logo Nós Trinamentos">
+        </a>
+
+        <ul class="menu">
+          <li>
+            <a href="#">Home</a>
+            <a href="#">Services</a>
+            <a href="#">Contact</a>
+            <a href="#">About</a>
+          </li>
+        </ul>
+      </nav>
+
+      <nav class="header-subcontainer-mobile">
+        <a class="main-logo-container-mobile" href="/">
+          <img class="main-logo-mobile" src="./assets/nos-logo.svg" alt="Logo Nós Trinamentos">
+        </a>
+      </nav>
+    </header>
+
+    <main>
+      <!-- Banner -->
+      <section class="banner-container"></section>
+    </main>
   </body>
 </html>
