Starting main banner

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap"
+      rel="stylesheet"
+    />
     <!-- CSS -->
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/header.css" />
@@ -21,7 +29,11 @@
     <header class="header-container">
       <nav class="header-subcontainer">
         <a class="main-logo-container" href="/">
-          <img class="main-logo" src="./assets/nos-logo.svg" alt="Logo Nós Trinamentos">
+          <img
+            class="main-logo"
+            src="./assets/nos-logo.svg"
+            alt="Logo Nós Trinamentos"
+          />
         </a>
 
         <ul class="menu">
@@ -36,14 +48,32 @@
 
       <nav class="header-subcontainer-mobile">
         <a class="main-logo-container-mobile" href="/">
-          <img class="main-logo-mobile" src="./assets/nos-logo.svg" alt="Logo Nós Trinamentos">
+          <img
+            class="main-logo-mobile"
+            src="./assets/nos-logo.svg"
+            alt="Logo Nós Trinamentos"
+          />
         </a>
       </nav>
     </header>
 
     <main>
       <!-- Banner -->
-      <section class="banner-container"></section>
+      <section class="banner-container">
+        <div class="banner-subcontainer-one">
+          <div class="banner-content-container">
+            <h1>Lorem, ipsum dolor sit amet consectetur</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+              tempore repellat ea facere earum maxime officiis quia! Soluta
+              laudantium est qui rem totam cupiditate libero corrupti sit, ipsum
+              nihil suscipit.
+            </p>
+            <button>Entrar em contato</button>
+          </div>
+        </div>
+        <div class="banner-subcontainer-two"></div>
+      </section>
     </main>
   </body>
 </html>
