Making the banner responsive

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               laudantium est qui rem totam cupiditate libero corrupti sit, ipsum
               nihil suscipit.
             </p>
-            <button>Entrar em contato</button>
+            <button>Contratar agora</button>
           </div>
         </div>
         <div class="banner-subcontainer-two"></div>
