--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/header.css" />
     <link rel="stylesheet" href="./styles/banner.css" />
+    <link rel="stylesheet" href="./styles/benefits.css" />
     <title>Nós Treinamentos</title>
   </head>
   <body>
@@ -73,7 +74,44 @@
         </div>
         <div class="banner-subcontainer-two"></div>
       </section>
+
+      <!-- Benefits -->
+      <section class="benefits-contaner">
+        <div class="benefits-subcontainer">
+          <div class="benefits-box">
+            <img src="./assets/like-icon.png" alt="Ícone de like">
+            <p>Lorem ipsum dolor sit amet</p>
+          </div>
+          <div class="benefits-box">
+            <img src="./assets/contract-icon.png" alt="Ícone de like">
+            <p>Lorem ipsum dolor sit amet</p>
+          </div>
+          <div class="benefits-box">
+            <img src="./assets/localization-icon.png" alt="Ícone de like">
+            <p>Lorem ipsum dolor sit amet</p>
+          </div>
+          <div class="benefits-box">
+            <img src="./assets/chat-icon.png" alt="Ícone de like">
+            <p>Lorem ipsum dolor sit amet</p>
+          </div>
+        </div>
+      </section>
     </main>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
   </body>
 
   <!-- Scripts -->
