--- a/index.html
+++ b/index.html
@@ -20,12 +20,31 @@
     />
     <!-- CSS -->
     <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/topbar.css" />
     <link rel="stylesheet" href="./styles/header.css" />
     <link rel="stylesheet" href="./styles/banner.css" />
     <link rel="stylesheet" href="./styles/benefits.css" />
     <title>Nós Treinamentos</title>
   </head>
   <body>
+    <!-- Top Bar -->
+    <section class="topbar-container">
+      <div class="topbar-subcontainer-one">
+        <a href="https://www.instagram.com/nostreinamentos" target="_blank">
+          <img src="./assets/instagram-icon.png" alt="Instagram Nós Treinamentos">
+        </a>
+        <a href="https://www.facebook.com/nostreinamentos" target="_blank">
+          <img src="./assets/facebook-icon.png" alt="Facebook Nós Treinamentos">
+        </a>
+        <a href="https://www.whatsapp.com/nostreinamentos" target="_blank">
+          <img src="./assets/whatsapp-icon.png" alt="WhatsApp Nós Treinamentos">
+        </a>
+      </div>
+      <div class="topbar-subcontainer-two">
+        &#x2715;
+      </div>
+    </section>
+
     <!-- Header -->
     <header>
       <nav>
@@ -120,5 +139,6 @@
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
     crossorigin="anonymous"
   ></script>
-  <script src="./script/header.js"></script>
+  <script src="./scripts/topbar.js"></script>
+  <script src="./scripts/header.js"></script>
 </html>
